# inferops-agent

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: eval-mock.yml
configs/: search_space.py
inferops/: bench_runner.py  cli.py  observability.py  schemas.py
reports/: baseline_1777362642.md  baseline_1777362784.md  baseline_1777363578.md  baseline_chat_short.md  baseline_chat_short_en.md  day1_agent_interview_review_bilingual.md  day2_xpeng_jd_interview_review_bilingual.md  phase1_baseline.md  phase1_baseline_en.md  phase5_real_ground_truth_eval.md  phase5_regression_demo_current.md  phase5_regression_demo_failure.txt
scripts/: build_corpus.py  print_agent_graph.py  run_agent.py  run_baseline.py  run_comparison.py  run_eval.py  run_grid_sweep.py  start_vllm.sh  verify_env.sh
tests/: conftest.py  test_agent_executor.py  test_agent_graph.py  test_agent_planner.py  test_agent_reflector.py  test_agent_state.py  test_analyze_bottleneck.py  test_bench_runner.py  test_cli.py  test_compare_experiments.py  test_eval_baselines.py  test_eval_harness.py  test_eval_judge.py  test_eval_metrics.py  test_eval_regression.py  test_eval_runner.py  test_experiment_memory.py  test_final_report.py  test_gpu_monitor.py  test_grid_sweep.py  test_intent.py  test_knowledge_retriever.py  test_profile_cpu.py  test_propose_config.py  test_rag_chunker.py  test_read_gpu_metrics.py  test_registry.py  test_run_benchmark.py  test_run_eval_script.py  test_traffic.py  test_vllm_process.py  test_workloads.py  test_write_report.py
workloads/: definitions.py
(+48 files in other folders)
