[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferops-agent"
version = "0.1.0"
description = "LLM inference optimization agent — automated experiment orchestration on vLLM"
requires-python = ">=3.11"
dependencies = [
    # Agent framework
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # Data validation
    "pydantic>=2.7.0",
    # Observability
    "mlflow>=2.17.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # GPU metrics
    "nvidia-ml-py>=12.0.0",
    # Utilities
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
serve = [
    "vllm>=0.8.0",
]
ui = [
    "chainlit>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "py-spy>=0.3.14",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
inferops = "inferops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["inferops", "configs", "workloads"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
